Save recommended and holding news to MongoDB with Jsoup thumbnails
Added functionality to store recommended news and holding stocks news into MongoDB, and fetch thumbnails for recommended news using Jsoup. 추천 뉴스와 보유 종목 뉴스를 MongoDB에 저장하고, Jsoup을 이용해 추천 뉴스의 썸네일을 가져오는 기능을 추가했습니다.